.azure/pipelines/apps/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: $(appName)
  namespace: $(k8sNamespace)

spec:
  replicas: $(replicas)

  selector:
    matchLabels:
      app: $(appName)

  template:
    metadata:
      labels:
        app: $(appName)

    spec:
      containers:
        - name: $(appName)
          image: $(containerRegistryAddress)/$(appName):$(buildTag)

          ports:
            - containerPort: $(containerPort)

          resources:
            requests:
              cpu: $(cpuRequest)
              memory: $(memoryRequest)

            limits:
              cpu: $(cpuLimit)
              memory: $(memoryLimit)

          securityContext:
            capabilities:
              drop:
                - NET_RAW

          volumeMounts:
            - name: token
              mountPath: "var/run/secrets/kubernetes.io/serviceaccount/"
              readOnly: true
