.azure/pipelines/apps/web/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: $(serviceName)
  namespace: $(k8sNamespace)

spec:
  type: ClusterIP

  ports:
    - port: 80
      targetPort: $(containerPort)

  selector:
    app: $(appName)
