.azure/pipelines/apps/web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: $(appName)
  namespace: "$(k8sNamespace)"

  labels:
    k8s-app: $(appName)

  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/proxy-body-size: 15m
    kubernetes.io/proxy-connect-timeout: "2400"
    kubernetes.io/proxy-read-timeout: "2400"
    kubernetes.io/proxy-send-timeouT: "2400"
    nginx.ingress.kubernetes.io/eventsource: "true"
    nginx.org/client-max-body-size: 15m
    nginx.org/server-snippets: gzip on;

status:
  loadBalancer:
    ingress:
      - ip: $(loadBalancerIp)

spec:
  tls:
    - hosts:
        - $(appDomain)
      secretName: $(appName)-tls

  rules:
    - host: $(appDomain)
      http:
        paths:
          - path: /$(appName)
            pathType: Prefix
            backend:
              service:
                name: $(appName)
                port:
                  number: $(containerPort)
